# agentera

./: .editorconfig  .gitignore  .leda  .lefthook.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  DESIGN.md  DOCS.md  HEALTH.md  ISSUES.md  PLAN.md  PROGRESS.md  README.md  ROADMAP.md  SPEC.md  TODO.md  UPGRADE.md  VISION.md  go.mod  magefile.go  package.json  plugin.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  registry.json  v3-handoff.json
.agentera/: DECISIONS.md  DESIGN.md  DOCS.md  EXPERIMENTS.md  HEALTH.md  OBJECTIVE.md  PLAN.md  PROGRESS.md  artifact_registry_duplication_characterization.yaml  capability_context_slimming_inventory.md  decisions.yaml  docs.yaml  gap-analysis-2026-05-05.md  health.yaml  install_root_behavior_inventory.yaml  install_root_interface_model.yaml  plan.yaml  progress.yaml  routing_exit_drift_characterization.yaml  session.yaml  smoke-cursor-pretooluse-evidence.txt  vision.yaml
.agentera/archive/: PLAN-2026-03-30-identity.md  PLAN-2026-03-31-audit3-fixes.md  PLAN-2026-03-31-pushback.md  (+154 more)
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.cursor/: hooks.json
.cursor-plugin/: plugin.json
.githooks/: pre-commit
.opencode/: package.json
.optimera/: count_prompt_tokens.py  harness  parse_tokens.py
agents/: openai.yaml
docs/: README.md  benchmark.md  d47-app-home-vocabulary-inventory.md  d58-json-output-surface-inventory.md  d59-json-output-budget-proposal.md  d59-json-output-closeout-measurements.md  vocabulary.md
hooks/: codex-hooks.json  codex-plugin-hooks.json  common.py  compaction.py  cursor_pre_tool_use.py  cursor_session_start.py  hooks.json  post-merge-check-bare.sh  session_start.py  session_stop.py  validate_artifact.py
references/: ecosystem-spec.md  v1-section-mapping.md
scripts/: agentera  agentera_upgrade.py  artifact_registry.py  capability_contract.py  coexistence_probe.py  compact_artifact.py  detect_stale_v1  eval-skills.py  eval_skills.py  extract_corpus.py  generate_contracts.py  generate_ecosystem_context.py  generate_js_install_root_contract.py  install_root.py  json_output_surface_manifest.yaml  measure_capability_context_payloads.py  measure_json_common.py  measure_json_output_surfaces.py  measure_token_payload.py  migrate_artifacts_v1_to_v2  migrate_v1_to_v2  next_major_doctor.py  package_registry.py  precommit-pytest.sh  precommit-vitest.sh  progress_commit.py  runtime_adapter_registry.py  self_audit.py  semantic_eval.py  semantic_fixtures.py  setup_codex.py  setup_copilot.py  setup_cursor.py  setup_doctor.py  single-binary.sh  smoke_installed_skills.py  smoke_live_hosts.py  smoke_opencode_bootstrap.mjs  smoke_setup_helpers.py  startup_analysis_contract.py  (+10 more)
tests/: conftest.py  routing_test_interface.py  test_agentera_cli_coverage.py  test_analyze_experiments.py  test_analyze_progress.py  test_app_home_contract.py  test_apply_bundle_phase_byte_equality.py  test_apply_bundle_phase_defense.py  test_artifact_registry_contract.py  test_audience_help_grouping.py  test_audience_namespace_cli_migration_contract.py  test_audience_namespace_parsers.py  test_bundle_freshness.py  test_bundle_skill_vocabulary_authority.py  test_capability_contract_interface_usage.py  test_capability_contract_loader.py  test_capability_contract_structure.py  test_capability_instruction_contract.py  test_capability_tool_classification.py  test_capability_validator_characterization.py  test_cli_json_schemas.py  test_cli_namespace_migration_closeout.py  test_coexistence_probe.py  test_compaction.py  test_compaction_retention_contract.py  test_compaction_status.py  test_cross_capability.py  test_cursor_session_start.py  test_decision44_vocabulary.py  test_decision45_cli_contract.py  test_decision_satisfaction_guidance.py  test_detect_stale_v1.py  test_dokumentera_capability.py  test_effective_profile.py  test_eval_skills.py  test_evaluator_handoff_contract.py  test_exit_vocabulary_authority.py  test_explicit_cli_surfaces.py  test_extract_all.py  test_extract_corpus.py  (+64 more)
(+414 files in other folders)
