[build-system]
requires = ["hatchling>=1.29"]
build-backend = "hatchling.build"

[project]
name = "agentera"
version = "2.6.1"
description = "Agentera app-home protocol and packaged upgrade CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "jgabor" },
]
dependencies = [
  "pyyaml",
]

[project.urls]
Homepage = "https://github.com/jgabor/agentera"
Repository = "https://github.com/jgabor/agentera"

[project.scripts]
agentera = "agentera:main"

[tool.hatch.build]
exclude = [
  "**/__pycache__",
  "**/*.pyc",
  "**/*.pyo",
  ".agentera",
  ".git",
  ".pytest_cache",
  ".opencode/node_modules",
  "packages/web/node_modules",
  "packages/web/dist",
  "packages/web/.astro",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentera"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "agentera/bundle/skills"
"scripts" = "agentera/bundle/scripts"
"hooks" = "agentera/bundle/hooks"
"references" = "agentera/bundle/references"
"agents" = "agentera/bundle/agents"
".agents/plugins" = "agentera/bundle/.agents/plugins"
".codex-plugin" = "agentera/bundle/.codex-plugin"
".cursor-plugin" = "agentera/bundle/.cursor-plugin"
".cursor/agents" = "agentera/bundle/.cursor/agents"
".claude-plugin" = "agentera/bundle/.claude-plugin"
".github/hooks" = "agentera/bundle/.github/hooks"
".github/plugin" = "agentera/bundle/.github/plugin"
".opencode/commands" = "agentera/bundle/.opencode/commands"
".opencode/agents" = "agentera/bundle/.opencode/agents"
".opencode/plugins" = "agentera/bundle/.opencode/plugins"
".opencode/package.json" = "agentera/bundle/.opencode/package.json"
"README.md" = "agentera/bundle/README.md"
"UPGRADE.md" = "agentera/bundle/UPGRADE.md"
"CHANGELOG.md" = "agentera/bundle/CHANGELOG.md"
"DESIGN.md" = "agentera/bundle/DESIGN.md"
"LICENSE" = "agentera/bundle/LICENSE"
"pyproject.toml" = "agentera/bundle/pyproject.toml"
"uv.lock" = "agentera/bundle/uv.lock"
"registry.json" = "agentera/bundle/registry.json"
"plugin.json" = "agentera/bundle/plugin.json"
